# agents-sandbox

./: README.md  distributed-specialiced-agent-A.py  distributed-specialiced-agent-R.py  distributed-specialiced-agent.py  pyproject.toml
agents/rabbit/: distributed-specialized-agent-A.py  distributed-specialized-agent-E.py  distributed-specialized-agent-R.py  launcher-agent.py
tools/: receive_kafka.py  send_kafka.py
tools/rabbit/: receive_rabbit.py  send_rabbit.py
tools/rabit/: send_rabbit.py
