[project]
name = "agents-sandbox"
version = "0.1.0"
description = ""
authors = [
    {name = "RICARDO.RUIZSAIZ",email = "ricardo.ruiz.saiz@zurich.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"

dependencies = [
    "virtualenv (>=20.29.1,<21.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "confluent-kafka (>=2.8.0,<3.0.0)",
    "langchain-community (>=0.3.16,<0.4.0)",
    "pika (>=1.3.2,<2.0.0)",
    "llama-index (>=0.12.16)",
    "llama-index-llms-ollama (>=0.5.1,<0.6.0)",
    "llama-cloud (>=0.1.11,<0.2.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
package-mode=false